-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
None
-
3
-
9223372036854775807
It looks like a patch has somehow resulted in a leak of job_stats on the server that result in a message being printed at unmount time:
[ 1095.059674] Lustre: Failing over lustre-MDT0000 [ 1095.090215] LustreError: 31568:0:(lprocfs_jobstats.c:137:job_stat_exit()) should not have any items [ 1095.093184] LustreError: 31568:0:(lprocfs_jobstats.c:137:job_stat_exit()) Skipped 20 previous similar messages [ 1095.146954] Lustre: server umount lustre-MDT0000 complete
This started around 2022-03-03 but I haven't isolated it to a specific patch yet.